--- a/ActorPushPlugin/ActorPushPlugin.uplugin
+++ b/ActorPushPlugin/ActorPushPlugin.uplugin
@@ -14,6 +14,8 @@
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
 	"Installed": false,
+	"EngineVersion": "4.26.0"
+	"WhitelistPlatforms": ["Win64","Win32","Mac","IOS","Android" ]
 	"Modules": [
 		{
 			"Name": "ActorPushPlugin",
